# rlgym-trueskill

./: .gitignore  LICENSE  README  README.md  build.bat  conda-env.bat  example.py  example_v1.py  example_v2.py  pyproject.toml  v1_tester.py
.github/workflows/: ci.yml
rlgym_trueskill/: __init__.py  trueskillworker.py  trueskillworkers.py
rlgym_trueskill/matchmaking/: matchmaker.py
rlgym_trueskill/matchmaking/trueskill/: probability.py
rlgym_trueskill/matchmaking/v1/: matchmaker.py
rlgym_trueskill/matchmaking/v1/rewards/: dummy_reward.py
rlgym_trueskill/matchmaking/v1/utils/: dynamicgmsetter.py  generate_episode.py
rlgym_trueskill/matchmaking/v2/: matchmaker.py
rlgym_trueskill/matchmaking/v2/rewards/: dummy_reward.py
tests/: test_trueskillworker.py
