[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlgym-trueskill"
version = "0.1.0"
description = "A Python package for TrueSkill-based ranking in RLGym environments"
readme = "README.md"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { file = "LICENSE" }
requires-python = "==3.9.*"
dependencies = [
    "rlgym==1.2.2",
    "rocket-league-gym-sim @ git+https://github.com/AechPro/rocket-league-gym-sim@main",
    "rocketsim",
    "trueskill==0.4.5",
    "setuptools",
    "wheel",
    "build",
    "twine",
    "pytest",
]
keywords = ["rlgym", "trueskill", "rocket-league", "ranking"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/chrisrca/rlgym-trueskill"