[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlgym-trueskill"
version = "0.1.0"
description = "A Python package for TrueSkill-based ranking in RLGym environments"
readme = "README.md"
authors = [{ name = "chrisrca" }, { name = "ericle85" }]
license = { file = "LICENSE" }
requires-python = "==3.9.*"
dependencies = [
    "rlgym==2.0.1",
    "rlgym[rl]==2.0.1",
    "rlgym[rl-sim]==2.0.1",
    "rlgym[rl-rlviser]==2.0.1",
    "trueskill==0.4.5",
    "rlgym-tools==2.3.9",
    "rlgym-ppo @ git+https://github.com/AechPro/rlgym-ppo.git@main",
    "setuptools",
    "wheel",
    "build",
    "twine",
    "pytest",
]
keywords = ["rlgym", "trueskill", "rocket-league", "ranking"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/chrisrca/rlgym-trueskill"